<resources>
    <string name="app_name">Sport-Manager</string>
    <string name="facebook_app_id" translatable="false">263220337444149</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb263220337444149</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="lozinka">Lozinka</string>
    <string name="nemate_racun">Nemate račun? Registrirajte se.</string>
    <string name="prijava">Prijava</string>
    <string name="e_mail">E-mail</string>
    <string name="korisnicko_imeR">Korisničko ime</string>
    <string name="adresaR">Adresa</string>
    <string name="broj_telefonaR">Broj telefona</string>
    <string name="imeR">Ime</string>
    <string name="lozinkaR">Lozinka</string>
    <string name="ponovite_lozinkuR">Ponovite lozinku</string>
    <string name="prezimeR">Prezime</string>
    <string name="registracijaR">Registracija</string>

    <color name="background">#FFFFFF</color>
    <string name="title_activity_aaaaaaa">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profileLastName">Prezime</string>
    <string name="profileName">Ime</string>
    <string name="profileEmail">E-mail</string>
    <string name="profileAddress">Adresa</string>
    <string name="profilePhone">Telefon</string>
    <string name="nav_my_profile">Moj profil</string>
    <string name="nav_places_list">Popis sportskih objekata</string>
    <string name="nav_my_places">Moji sportski objekti</string>
    <string name="nav_my_reservations">Moje rezervacije</string>
    <string name="nav_add_new_reservation">Dodavanje termina</string>
    <string name="nav_about">O aplikaciji</string>
    <string name="nav_settings">Postavke</string>
    <string name="nav_logout">Odjava</string>
    <string name="about">Ova aplikacija izrađena kao projektni zadatak u sklopu kolegija Analiza u razvoj programa na Faktultetu organizacije i informatike. &#xA;&#xA;Tim koji je radio na aplikaciji sastoji se od 4 člana: Robert Pizek, Karlo Šimunović, Tarek Saghir i Marko Flajšek</string>
    <string name="phone">Ukoliko kao registrirani korisnik želite mogućnost dodavanja vlastitiog objekta ili želite prijaviti neke grešku u aplikaciji možete nas kontaktirati putem e-maila.</string>
    <string name="email">Pošaljite e-mail</string>
    <string name="place_name">Naziv objekta</string>
    <string name="place_address">Adresa</string>
    <string name="place_number">Broj telefona</string>
    <string name="place_working_hours_start">Početak radnog vremena</string>
    <string name="place_working_hours_end">Kraj radnog vremena</string>
    <string name="place_image_link">URL slike</string>
    <string name="PlaceAdd">Dodaj objekt</string>
    <string name="PlaceContinue">Nastavak...</string>
    <string name="appointment_hours_start">Početak termina</string>
    <string name="appointment_hours_end">Kraj termina</string>
    <string name="appointment_max_player">Najveći broj sudionika</string>
    <string name="appointment_pass">Lozinka za potvrdu</string>
    <string name="tvPlacePeriod">Unesite URL željene slike ili dodajte sliku iz memorije uređaja. U sljedećem prozoru možete dodati termine za dodani objekt.</string>

    <string name="tvPlaceName">Naziv objekta</string>
    <string name="placeAddress">Adresa</string>
    <string name="placeWorkingHours">Radno vrijeme</string>
    <string name="place_working_hours">Radno vrijeme</string>
    <string name="placePhone">Kontakt</string>
    <string name="placeBook">Rezerviraj termin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reservationCalendarText">Odaberite datum:</string>
    <string name="reservationAppointmentText">Odaberite termin, sport i broj osoba:</string>
    <string name="appointmentPrivatePublic">Privatni termin</string>
    <string name="buttonSetAppointment">Kreiraj termin</string>
    <string name="buttonAddAppointment">Dodaj novi termin</string>
    <string name="buttonObjectAppointments">Rezervirani termini</string>
    <string name="buttonChangeProfilePicture">Promjeni sliku</string>
    <string name="myAppointmentPlace">Datum</string>
    <string name="myAppointmentTime">Termin</string>
    <string name="myAppointmentAddress">Adresa</string>
    <string name="myAppointmentType">Vrsta sporta</string>
    <string name="myAppointmentPlayers">Broj sudionika</string>
    <string name="myAppointmentID">ID rezervacije</string>
    <string name="myAppointmentConfirm">Potvrdi dolazak</string>
    <string name="myAppointmentDelete">Obriši rezervaciju</string>
    <string name="tvAppointmentLabel">Odaberite datum:</string>
    <string name="myPlaceName">Naziv</string>
    <string name="myPlaceAddress">Adresa</string>
    <string name="navBarUserName">Korisnik: Ime i prezime</string>
    <string name="navBarUserEmail">sport.manager@email.com</string>
    <string name="placeName">Naziv</string>
    <string name="friendsName">Friends name</string>
    <string name="PlaceAddPicture">Upload slike</string>
    <string name="reservationSportName">Naziv sporta</string>
    <string name="reservationDate">Datum</string>
    <string name="reservationStart">Početak</string>
    <string name="place_appointment_date">Datum</string>
    <string name="place_appointment_sport_name">Sport</string>
    <string name="placeUser">Rezervirao</string>
    <string name="placeOtherUsers">Pozvani korisnici</string>
    <string name="placeAppointmentID">ID rezervacije</string>
    <string name="appointmentDelete">Izbriši rezervaciju</string>
    <string name="reservationPlaceName">Naziv objekta</string>
    <string name="autoCompleteFriendsName">Upišite e-mail korisnika</string>
    <string name="edInviteTeamName">Naziv tima</string>
    <string name="btnInviteFriendAdd">Dodaj</string>
    <string name="btnInviteFriendsFinish">Završi rezervaciju</string>
    <string name="appointmentPassword">Kreiraj lozinku</string>

    //activity titles
    <string name="titleRegisterActivity">Registracija</string>
    <string name="titleReservationActivity">Rezervacija termina</string>
    <string name="titleProfileActivity">Moj profil</string>
    <string name="titlePlaceDetailsActivity">Detalji objekta</string>
    <string name="titleMyReservationsActivity">Moje rezervacije</string>
    <string name="titleMyPlacesReservationActivity">Rezervacije mojih objekata</string>
    <string name="titleMyPlacesActivity">Moji sportski objekti</string>
    <string name="titleMyPlacesAppointmentFragment">Termini u objektu</string>
    <string name="titleInviteFriendsActivity">Pozivanje prijatelja</string>
    <string name="titleAllPlacesActivity">Sportski objekti</string>
    <string name="titleAddPlaceFragment">Dodaj sportski objekt</string>
    <string name="titleAddAppointmentActivity">Dodaj termin</string>
    <string name="titleAboutActivity">O aplikaciji</string>
    <string name="titleSettingsActivity">Postavke</string>

    //various titles
    <string name="titleTimePicker">Odaberi vrijeme</string>
    <string name="toastTermAddedTrue">Uspješno ste unijeli termin</string>
    <string name="toastNoModule">Nemate uključeni modul, provjerite u postavkama</string>
    <string name="toastTermAddedFalse">Dodavanje termina nije uspjelo:</string>
    <string name="toastFacilityAddedTrue">Uspješno ste dodali novi objekt</string>
    <string name="toastFacilityAddedFalse">Dodavanje objekta nije uspjelo:</string>
    <string name="progressDataLoading">Dohvaćanje podataka</string>
    <string name="toastInviteFriendsAuto">Vi ste automatski dodani u tim!</string>
    <string name="toastInviteFriendsAdded">Korisnik je već na popisu!</string>
    <string name="toastInviteFriendsNotFound">Ne postoji traženi korisnik!</string>
    <string name="progressReservationCreation">Kreiranje rezervacije</string>
    <string name="toastReservationComplete">Uspješno ste rezervirali termin!</string>
    <string name="alertLogin">Greška u dohvaćanju podataka!</string>
    <string name="toastNoTermsForFacility">"Nema unešenih termina za taj objekt"</string>
    <string name="toastAppointmentDeleted">Uspješno ste izbrisali termin!</string>
    <string name="toastNoTerm">Nemate termina</string>
    <string name="toastNoFacilities">Trenutno nemate svojih sportskih objekata!</string>
    <string name="toastReservationDeleted">Uspješno ste izbrisali rezervaciju</string>
    <string name="toastNoReservation">Nemate rezervacija</string>
    <string name="toastNoReservations">Trenutno nemate svojih rezervacija!</string>
    <string name="toastTermDeletionSuccessful">Uspješno ste izbrisali termin!</string>
    <string name="toastAppointmentConfirmation">Uspješno potvrđen termin!</string>
    <string name="toastError">Greška</string>
    <string name="progressMapLoading">Učitavanje karte</string>
    <string name="toastMapUnavailable">Nije moguće učitati Google mapu!</string>
    <string name="toastRegistrationSuccessful">Uspješno ste se registrirali!</string>
    <string name="toastRegistrationFailed">Registracija nije uspjela:</string>
    <string name="progressTermsLoading">Učitavanje termina</string>
    <string name="errorFieldNecessary">Polje je obavezno</string>
    <string name="progressDataCheck">Provjera podataka</string>

    <string name="nfcSwitch">NFC modul</string>
    <string name="passwordSwitch">Password modul</string>
    <string name="btnDeactivateUserAccount">Deaktiviraj moj račun</string>
    <string name="tvChooseLanguage">Language</string>

    <string name="errorUsernameNotFound">Korisničko ime ne postoji</string>
    <string name="errorWrongPassword">Unijeli ste krivu lozinku</string>
    <string name="errorMinOneParticipant">Mora biti barem jedan sudionik</string>
    <string name="errorWorkingHours">Kraj radnog vremena je prije početka</string>
    <string name="errorEmailInvalid">E-mail nije validan</string>
    <string name="errorPasswordMatching">Lozinke se ne podudaraju</string>

    <string name="toastAppointmentCheck">Vlasnik je zabilježio Vaš dolazak. Osvježite pregled rezervacija za provjeru.</string>
    <string name="tvNotificationsSwitch">Notifikacije</string>
    <string name="btnDeleteReservation">Obriši termin</string>
    <string name="tvPasswordAppointment">Lozinka termina</string>
    <string name="tvMaxPlayers">Maksimalan broj sudionika</string>
    <string name="tvDateTerm">Datum</string>

    <string-array name="languages_array">
        <item>Hrvatski</item>
        <item>Engleski</item>
    </string-array>

</resources>
