<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.foi.air1603.password_verification_module.PasswordMainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txiPasswordV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/btnConfirm"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPasswordV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordConfirmPass"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordConfirmButton"
        android:layout_marginBottom="154dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/passwordConfirmInstruction"
        android:layout_width="350dp"
        android:textAlignment="center"
        android:textColor="#263238"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/twPasswordInstruction" />

</RelativeLayout>
